# DeepResearchWeb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  test-pages.js
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  chat_agent.py  research_agent.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  health.py  mcp.py  memory.py  messages.py  research.py  sessions.py  skills.py  tools.py  user_env_config.py  user_settings.py
backend/app/core/: cache.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  redis.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  mcp_config.py  message.py  research_task.py  session.py  skill_config.py  tool_config.py  user.py  user_env_config.py  user_notification_settings.py
backend/app/schemas/: __init__.py  mcp.py  message.py  research.py  session.py  skill.py  tool.py  user.py  user_env_config.py
backend/app/services/: mcp_service.py  memory_service.py  skill_service.py  tool_service.py
backend/app/utils/: logger.py
backend/app/workers/: __init__.py  research_worker.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_memory.py  test_research.py  test_security.py
backend/tests/api/: __init__.py
backend/tests/core/: __init__.py  test_cache.py
backend/tests/models/: __init__.py  test_session.py  test_user.py
backend/tests/services/: __init__.py
(+110 files in other folders)
